# vinyl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  make_appimage.sh
assets/: gen_icon.py
src/: main.cpp
src/admuter/: admuter.cpp  admuter.h
src/mediacontroller/: mediacontroller.cpp  mediacontroller.h
src/mpris/: mprismanager.cpp  mprismanager.h  mprisplayer.cpp  mprisplayer.h
src/qml/: ControlBar.qml  GlassPanel.qml  GroovrRecord.qml  PlayerSelector.qml  SeekBar.qml  VinylRecord.qml  main.qml
src/settings/: settingsmanager.cpp  settingsmanager.h
